added support for textarea tag in HTML/CSS

--- a/core/assets/home/programs/htmlTester/assets/index.html
+++ b/core/assets/home/programs/htmlTester/assets/index.html
@@ -16,8 +16,8 @@
             </div>
             <p>This is super dandy to make USER IDE ECS Programs with ease</p>
         </div>
-        <div class='cloud'>
+        <textarea class='cloud'>
             Follow @gry_jana on Twitter for more updates on USER IDE!
-        </div>
+        </textarea>
     </body>
 </html>
