added non-text cursor to USER UI text fields
added text alignment as well

--- a/core/assets/home/programs/htmlTester/assets/index.html
+++ b/core/assets/home/programs/htmlTester/assets/index.html
@@ -6,7 +6,7 @@
     <body>
         <p class='cloud'>#ScreenshotSaturday - January 23rd 2021</p>
         <p class='cloud'>USER IDE: UI with HTML and CSS</p>
-        <div class='cloud'>
+<!--        <div class='cloud'>
             <p>Hi Twitter!</p>
             <p>This is basic html and css making up this ECS Program in the USER IDE Virtual Environment</p>
             <div class='container'>
@@ -15,9 +15,9 @@
                 <p>Take a look at the code in the other image!</p>
             </div>
             <p>This is super dandy to make USER IDE ECS Programs with ease</p>
-        </div>
+        </div>-->
         <textarea class='cloud'>
-            Follow @gry_jana on Twitter for more updates on USER IDE!
+            0
         </textarea>
     </body>
 </html>
