fixed textless textarea bug

--- a/core/assets/home/programs/htmlTester/assets/index.html
+++ b/core/assets/home/programs/htmlTester/assets/index.html
@@ -4,20 +4,8 @@
         <meta charset='utf-8'>
     </head>
     <body>
-        <p class='cloud'>#ScreenshotSaturday - January 23rd 2021</p>
-        <p class='cloud'>USER IDE: UI with HTML and CSS</p>
-<!--        <div class='cloud'>
-            <p>Hi Twitter!</p>
-            <p>This is basic html and css making up this ECS Program in the USER IDE Virtual Environment</p>
-            <div class='container'>
-                <p>Here is some text that is formatted with a styled HTML DIV Tag.</p>
-                <p>USER IDE UI supports many simple html tags and css properties, including classes and IDs!</p>
-                <p>Take a look at the code in the other image!</p>
-            </div>
-            <p>This is super dandy to make USER IDE ECS Programs with ease</p>
-        </div>-->
-        <textarea class='cloud'>
-            0
-        </textarea>
+        <p class='cloud'>Text Edit Test!</p>
+        <p class='cloud'>Enter some text below:</p>
+        <textarea class='cloud'></textarea>
     </body>
 </html>
