started ECS Attribute implementation

--- a/core/assets/home/programs/htmlTester/assets/index.html
+++ b/core/assets/home/programs/htmlTester/assets/index.html
@@ -7,5 +7,6 @@
         <p class='cloud'>Text Edit Test!</p>
         <p class='cloud'>Enter some text below:</p>
         <textarea class='cloud'></textarea>
+        <p class='cloud' ecs='[new TextToTimeComponent()]'>Test</p>
     </body>
 </html>
